<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.ThirdFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="260dp">

                <ImageView
                    android:id="@+id/h_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/h_header"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                     />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/h_header"
                    android:layout_marginTop="30dp"
                    android:textSize="17sp" />


            </RelativeLayout>

            <com.example.child.model.ItemView
                android:id="@+id/nickName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:left_icon="@drawable/ic_nick_name"
                app:left_text="@string/name_tip"
                app:right_text="@string/name"
                />

            <com.example.child.model.ItemView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:left_icon="@drawable/ic_sex"
                app:left_text="@string/sex_tip"
                app:right_text="@string/sex" />


            <com.example.child.model.ItemView
                android:id="@+id/pass"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:left_icon="@drawable/ic_pass"
                app:left_text="@string/safe_tip"
                app:right_text="" />
            <com.example.child.model.ItemView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:left_icon="@drawable/ic_about"
                app:left_text="@string/version_tip"
                app:right_text="" />

    </LinearLayout>
</FrameLayout>